# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Mark Farrell
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-prometheus-push-to-gateway"
description = "Push metrics to a prometheus pushgateway"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Mark Farrell", email = "mark.andrew.farrell@gmail.com"}
]
urls = {Homepage = "https://github.com/markafarrell/CircuitPython_prometheus_push_to_gateway"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "prometheus_push_to_gateway",
    "prometheus",
    "pushgateway",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["prometheus_push_to_gateway"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
